catalog/istio-stack/gke/google-destinationrules.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr-google-storage-api
  namespace: apps
spec:
  host: storage.googleapis.com
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 80
        tls:
          mode: SIMPLE # initiates HTTPS
